--- a/app/views/posts/new.erb
+++ b/app/views/posts/new.erb
@@ -1,6 +1,6 @@
 <%= form_for @post do |p| %>
 	Post Title: <%= p.text_field :title %></br>
 	Content: <%= p.text_area :content %></br>
-	<%= p.collection_check_boxes(:post, :category_ids, Category.all, :id, :name) %></br>
+	Select your post's categories! <%= p.collection_check_boxes(:category_ids, @categories, :id, :name)%></br>
 	<%= p.submit "Create Post" %>
 <% end %>
