--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -1,5 +1,5 @@
 <%@posts.each do |post| %>
-	<h1><%=post.title %></h1>
-	<h2>Content: <%=post.content %></h2>
-	<h2>Created By: <%=link_to post.user.user_name, post_url(post)%></h2>
+	<h3><%=link_to post.title, post_path(post) %></h3>
+	<h4>Content: <%=post.content %></h4>
+	<h4>Created By: <%=link_to post.user.user_name, user_path(post.user) %></h4>
 <% end %>
