--- a/app/views/posts/new.erb
+++ b/app/views/posts/new.erb
@@ -1,6 +1,7 @@
+<h2> New Post </h2>
 <%= form_for @post do |p| %>
-	Post Title: <%= p.text_field :title %></br>
-	Content: <%= p.text_area :content %></br>
-	Select your post's categories! <%= p.collection_check_boxes(:category_ids, @categories, :id, :name)%></br>
+	Post Title: <%= p.text_field :title %></br><br>
+	Content: <%= p.text_area :content %></br><br>
+	Select your post's categories! <%= p.collection_check_boxes(:category_ids, @categories, :id, :name)%></br><br>
 	<%= p.submit "Create Post" %>
 <% end %>
