--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -1,3 +1,4 @@
+<h1> TalkAboutIt! </h1>
 <%@posts.each do |post| %>
 	<h3><%=link_to post.title, post_path(post) %></h3>
 	<h4>Content: <%=post.content %></h4>
