added css | welcome page

--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,4 +1,8 @@
+
+<div style="text-align: center;"/>
+<h1>Edit Category: </h1>
 <%= form_for :category do |c| %>
-	Edit Category Name: <%=c.text_field :name %></br>
+	Category Name: <%=c.text_field :name %></br>
 	<%= c.submit "Edit Category" %>
 <% end %>
+</div>
