--- a/app/views/posts/new.erb
+++ b/app/views/posts/new.erb
@@ -1,7 +1,9 @@
-<h2> New Post </h2>
+<div style="text-align: center;"/>
+<h1> New Post </h1>
 <%= form_for @post do |p| %>
 	Post Title: <%= p.text_field :title %></br><br>
 	Content: <%= p.text_area :content %></br><br>
 	Select your post's categories! <%= p.collection_check_boxes(:category_ids, @categories, :id, :name)%></br><br>
 	<%= p.submit "Create Post" %>
 <% end %>
+</div>
