--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -1,3 +1,5 @@
+<div style="text-align: center;"/>
 <h1><%= @post.title%></h1>
 <h3>Created by: <%= @post.user.user_name %></h3>
 <p><%= @post.content %></p>
+</div>
