--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,3 +1,5 @@
+<div style="text-align: center;"/>
 <% @categories.each do |category| %>
 	<h3><%=link_to category.name, post_path(category.name) %></h3>
 <%end %>
+</div>
