--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,4 +1,7 @@
+<div style="text-align: center;"/>
+<h1>Create Category: </h1>
 <%= form_for :category do |c| %>
 	Category Name: <%=c.text_field :name %></br>
 	<%= c.submit "Create Category" %>
 <% end %>
+</div>
