--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -1,5 +1,8 @@
+<div style="text-align: center;"/>
+<h1>Recent Posts: </h1>
 <%@posts.each do |post| %>
 	<h3><%=link_to post.title, post_path(post) %></h3>
 	<h4>Content: <%=post.content %></h4>
 	<h4>Created By: <%=link_to post.user.user_name, user_path(post.user) %></h4>
 <% end %>
+</div>
