--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,3 +1,4 @@
+<div style="text-align: center;"/>
 <h1> Create your new profile! </h1>
 
 <%= form_for @user do |f| %>
@@ -7,4 +8,5 @@
     Location: <%= f.text_field :location %><br><br>
     Email: <%= f.text_field :email %><br><br>
     <%= f.submit %><br><br>
-<% end %>   
+<% end %> 
+</div>
