--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div style="text-align: center;"/>
 <h1>Welcome To Talk About It</h1>
 	<%= button_to "Create Account", new_user_path, method: :get %>
-	<%= button_to "Login", login_user_path, method: :get %>
+	<%= button_to "Login", login_path, method: :get %>
 </div>
