--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -7,6 +7,9 @@
     Status: <%= f.text_field :status %><br><br>
     Location: <%= f.text_field :location %><br><br>
     Email: <%= f.text_field :email %><br><br>
+    Password: <%= f.password_field :password %><br><br>
+    Password Confirmation: <%= f.password_field :password_confirmation %><br><br>
+
     <%= f.submit %><br><br>
 <% end %> 
 </div>
