--- a/app/views/posts/new.erb
+++ b/app/views/posts/new.erb
@@ -1,3 +1,18 @@
+
+<style type="text/css">
+	div {
+		position: relative;
+  		width: 89%;
+  		height: 89%;
+  		border: 25px solid orange;
+  		padding: 25px;
+  		margin: 25px;
+	}
+
+</style>
+
+
+
 <div style="text-align: center;"/>
 <h1> New Post </h1>
 <%= form_for @post do |p| %>
