--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,3 +1,18 @@
+
+<style type="text/css">
+	div {
+		position: relative;
+  		width: 89%;
+  		height: 89%;
+  		border: 25px solid orange;
+  		padding: 25px;
+  		margin: 25px;
+	}
+
+</style>
+
+
+
 <div style="text-align: center;"/>
 <% @categories.each do |category| %>
 	<h3><%=link_to category.name, post_path(category.name) %></h3>
