--- a/app/views/posts/edit.erb
+++ b/app/views/posts/edit.erb
@@ -1,3 +1,19 @@
+
+<style type="text/css">
+	div {
+		position: relative;
+  		width: 89%;
+  		height: 89%;
+  		border: 25px solid orange;
+  		padding: 25px;
+  		margin: 25px;
+	}
+
+</style>
+
+
+
+
 <div style="text-align: center;"/>
 <%= form_for @post do |p| %>
 	Edit Post Title: <%= p.text_field :title %></br>
