--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -1,3 +1,19 @@
+
+<style type="text/css">
+	div {
+		position: relative;
+  		width: 89%;
+  		height: 89%;
+  		border: 25px solid orange;
+  		padding: 25px;
+  		margin: 25px;
+	}
+
+</style>
+
+
+
+
 <div style="text-align: center;"/>
 <h1> Edit your new profile! </h1>
 
