--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,3 +1,18 @@
+
+<style type="text/css">
+	div {
+		position: relative;
+  		width: 89%;
+  		height: 89%;
+  		border: 25px solid orange;
+  		padding: 25px;
+  		margin: 25px;
+	}
+
+</style>
+
+
+
 <div style="text-align: center;"/>
 <h1><%= "Welcome to #{@user.user_name}'s page. "%></h1>
 <h3>Bio: <%= @user.bio %></h3>
