added some pretty colors

--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,6 +1,12 @@
 
 
 <style type="text/css">
+
+	body {
+		background-image: url(http://eskipaper.com/images/free-background-4.jpg);
+	}
+
+
 	div {
 		position: relative;
   		width: 89%;
