--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -1,5 +1,7 @@
 
 <style type="text/css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
 	div {
 		position: relative;
   		width: 89%;
