--- a/app/views/posts/new.erb
+++ b/app/views/posts/new.erb
@@ -1,5 +1,11 @@
 
 <style type="text/css">
+
+	body {
+		background-image: url(http://eskipaper.com/images/free-background-4.jpg);
+	}
+	
+
 	div {
 		position: relative;
   		width: 89%;
