--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,6 +1,11 @@
 
 
 <style type="text/css">
+
+  body {
+    background-image: url(http://eskipaper.com/images/free-background-4.jpg);
+  }3
+
 	div {
 		position: relative;
   		width: 89%;
