--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -2,15 +2,15 @@
 <style type="text/css">
 
 	body {
-		background-image: url(http://eskipaper.com/images/free-background-4.jpg);
+		background-image: url(http://blog.hostbaby.com/wp-content/uploads/2014/03/PaintSquares_1400x900.jpg);
 	}
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
 	div {
-		position: relative;
+		position: fixed;
   		width: 89%;
-  		height: 89%;
+  		height: 95%;
   		border: 25px solid orange;
   		padding: 25px;
   		margin: 25px;
