--- a/app/views/posts/new.erb
+++ b/app/views/posts/new.erb
@@ -2,7 +2,7 @@
 <style type="text/css">
 
 	body {
-		background-image: url(http://eskipaper.com/images/free-background-4.jpg);
+		background-image: url(https://images.pexels.com/photos/164005/pexels-photo-164005.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
 	}
 	
 
