--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -3,14 +3,15 @@
 <style type="text/css">
 
   body {
-    background-image: url(http://eskipaper.com/images/free-background-4.jpg);
+    background-image: url(https://images.pexels.com/photos/997443/pexels-photo-997443.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+    position: relative
   }
 
 	div {
-		position: relative;
+		  position: relative;
   		width: 89%;
   		height: 89%;
-  		border: 25px solid orange;
+  		border: 25px solid grey;
   		padding: 25px;
   		margin: 25px;
 	}
