--- a/app/views/users/verify.html.erb
+++ b/app/views/users/verify.html.erb
@@ -2,7 +2,7 @@
 <style type="text/css">
 
 	body {
-		background-image: url(http://eskipaper.com/images/free-background-4.jpg);
+		background-image: url(https://images.pexels.com/photos/1269968/pexels-photo-1269968.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
 	}
 
 	div {
