--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 
 <style type="text/css">
 	body {
-		background-image: url(https://cdn.pixabay.com/photo/2018/04/05/14/09/sunflower-3292932__340.jpg);
+		background-image: url(https://images.pexels.com/photos/917494/pexels-photo-917494.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
 		background-repeat: no-repeat;
 		background-size: 100%, 100%;
 	}
@@ -17,7 +17,7 @@
 	}
 
 	#home_title {
-		color: #CCEEEE;
+		
 	}
 
 
