added pretty colors

--- a/app/views/posts/edit.erb
+++ b/app/views/posts/edit.erb
@@ -9,7 +9,7 @@
 		position: relative;
   		width: 89%;
   		height: 89%;
-  		border: 25px solid orange;
+  		/* border: 25px solid orange; */
   		padding: 25px;
   		margin: 25px;
 	}
