--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -11,7 +11,7 @@
 		position: fixed;
   		width: 89%;
   		height: 95%;
-  		border: 25px solid orange;
+  		/* border: 25px solid orange; */
   		padding: 25px;
   		margin: 25px;
 	}
