--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -17,7 +17,7 @@
 		position: relative;
   		width: 89%;
   		height: 89%;
-  		border: 8px solid grey;
+  		/* border: 8px solid grey; */
   		padding: 10px;
   		margin: 20px;
 	}
