--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -11,7 +11,7 @@
 		  position: relative;
   		width: 89%;
   		height: 89%;
-  		border: 25px solid grey;
+  		/* border: 25px solid grey; */
   		padding: 25px;
   		margin: 25px;
 	}
