--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,62 @@
 <!DOCTYPE html>
+
+<style>
+body {margin:0;}
+
+
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.navbar a:hover {
+  background: #ddd;
+  color: black;
+}
+
+.main {
+  padding: 16px;
+  margin-top: 30px;
+  height: 1500px; /* Used in this example to enable scrolling */
+}
+
+#buttoncontainer {
+  display:inline-flex;
+  text-align: center;
+}
+
+</style>
+</head>
+
+  <div id="navbar">
+    <div id="buttoncontainer">
+    <p><%= button_to 'Welcome', "/", method: :get %></p>
+    <% if session[:current_user_id] != nil %>
+    <p><%= button_to 'My Page', "/users/#{session[:current_user_id]}", method: :get %></p>
+    <p><%= button_to 'TalkAboutIt Board', "/posts", method: :get %></p>
+    <p><%= button_to 'New Post', "/posts/new", method: :get %></p>
+    <p><%= button_to 'Logout', '/signin?', method: :delete %></p>
+    <% end %>
+  </div>
+  </div>
 <html>
   <head>
+
+
+
     <title>TalkAboutIt</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -8,12 +64,6 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-  <p><%= button_to 'Logout', '/signin?', method: :delete %></p>
-  <p><%= button_to 'My Page', "/users/#{session[:current_user_id]}", method: :get %></p>
-  <p><%= button_to 'Welcome', "/", method: :get %></p>
-  <p><%= button_to 'TalkAboutIt Board', "/posts", method: :get %></p>
-  <p><%= button_to 'New Post', "/posts/new", method: :get %></p>
-
   <body>
     <%= yield %>
   </body>
