--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -3,7 +3,7 @@
 <style type="text/css">
 
 	body {
-		background-image: url(http://eskipaper.com/images/free-background-4.jpg);
+		background-image: url(https://images.pexels.com/photos/1323550/pexels-photo-1323550.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
 	}
 
 
