--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,7 +1,7 @@
 <style type="text/css">
 
 	body {
-		background-image: url(http://eskipaper.com/images/free-background-4.jpg);
+		background-image: url(https://images.pexels.com/photos/1323550/pexels-photo-1323550.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
 	}
 
 
@@ -21,7 +21,7 @@
 <div style="text-align: center;"/>
 <h1>Create Category: </h1>
 <%= form_for :category do |c| %>
-	Category Name: <%=c.text_field :name %></br>
+	Category Name: <%=c.text_field :name %></br><br>
 	<%= c.submit "Create Category" %>
 <% end %>
 </div>
