--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -25,4 +25,5 @@
 <% @categories.each do |category| %>
 	<h3><%=link_to category.name, post_path(category.name) %></h3>
 <%end %>
+<p><%= button_to 'New Category', "/categories/new", method: :get %></p>
 </div>
