--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/posts/new">Create Post</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/categories">Categories</a>
+      </li>
       
     </ul>
   </div>
