--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -4,7 +4,11 @@
 
   body {
     background-image: url(https://images.pexels.com/photos/997443/pexels-photo-997443.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
-    position: relative
+    position: relative;
+    
+  }
+  div{
+    color: white;
   }
 
 
