f'd around with bs

--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -7,11 +7,16 @@
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
+#postcontainer {
+	text-align: center;
+	width: 50;
+}
+
 
 </style>
 
 
-<div style="text-align: center;"/>
+<div id = "postcontainer";/>
 <h1> TalkAboutIt! </h1>
 <h1>Recent Posts: </h1>
 <%@posts.each do |post| %><br>
