--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/categories">Categories</a>
       </li>
+       <li class="nav-item ml-auto">
+        <a class="nav-link" href="/signin">logout</a>
+      </li>
       
     </ul>
   </div>
