--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
         <a class="nav-link" href="/categories">Categories</a>
       </li>
        <li class="nav-item ml-auto">
-        <a class="nav-link" href="/signin">logout</a>
+        <a class="nav-link" href="/signin?">Logout</a>
       </li>
       
     </ul>
