added pretty buttons

--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -7,7 +7,7 @@
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-#postcontainer {
+#postHeader {
 	text-align: center;
 	width: 50;
 }
@@ -16,14 +16,17 @@
 </style>
 
 
-<div id = "postcontainer";/>
+<div style="text-align: center";/>
 <h1> TalkAboutIt! </h1>
 <h1>Recent Posts: </h1>
+</div>
+
 <%@posts.each do |post| %><br>
-	<div style= "border: 5px solid grey;">
+	<div style= "text-align: center; border: 5px solid grey; ">
 	<h3><%=link_to post.title, post_path(post) %></h3>
 	<h4><%=post.content %></h4>
 	<h4>Created By: <%=link_to post.user.user_name, user_path(post.user) %></h4>
 	</div>
 <% end %>
+<button type="button" class="btn btn-danger">Danger</button>
 </div>
