--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
       <li class="nav-item">
         <a class="nav-link" href="/categories">Categories</a>
       </li>
-       <li class="nav-item ml-auto">
+       <li class="nav-item navbar-right">
         <a class="nav-link" href="/signin">logout</a>
       </li>
       
