--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -14,7 +14,7 @@
 <div style="text-align: center;"/>
 <h1> TalkAboutIt Categories </h1>
 <% @categories.each do |category| %>
-	<h3><%=link_to category.name, category_path(category.id) %></h3>
+	<h3><%=link_to category.name.capitalize, category_path(category.id) %></h3>
 <%end %>
 <p><%= button_to 'New Category', "/categories/new", method: :get %></p>
 </div>
