--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,6 +14,7 @@
         top: 35%;
         left: 50%;
         transform: translate(-50%, -50%);
+
     }
 
 </style>
@@ -21,6 +22,7 @@
 
 
 <div style="text-align: center;", id = "layout">
+<img src="Logo.png" />
 <h1 id="home_title">Welcome To TalkAboutIt</h1>
 	<%= button_to "Create Account", new_user_path, method: :get %><br>
 	<%= button_to "Login", signin_path, method: :get %>
