--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -12,6 +12,12 @@
 	width: 50;
 }
 
+#sidebyside {
+	display: inline-block;
+	margin: 0;
+	padding: 0;
+}
+
 
 </style>
 
@@ -25,6 +31,16 @@
 	<div style= "text-align: center; border: 5px solid grey; ">
 	<h3><%=link_to post.title, post_path(post) %></h3>
 	<h4><%=post.content %></h4>
+	<% if post.categories.count > 0 %>
+	<div id = "sidebyside">
+	<% categorynames = []%>
+		<% post.categories.each do |category| %>
+			<h6><% categorynames << category.name %></h6>
+		<% end %>
+	<% x = categorynames.join(" ")%>
+	<h6><%= "Category(ies): #{x} "%></h6>
+	</div>	
+	<% end %>
 	<h5>Created By: <%=link_to post.user.user_name, user_path(post.user) %></h5>
 	</div>
 <% end %>
