--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -1,16 +1,34 @@
 
 <style type="text/css">
-
+/*
 	body {
 		background-image: url(http://blog.hostbaby.com/wp-content/uploads/2014/03/PaintSquares_1400x900.jpg);
 	}
+*/
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-#postHeader {
+
+	@import url(https://fonts.googleapis.com/css?family=Advent+Pro:100);
+	html { 
+  	background:  url(http://i.imgur.com/5OsqTua.gif) no-repeat center center fixed; 
+  	background-size: cover;
+	}
+	h1{
+  	font-family: 'Advent Pro', sans-serif;
+  	font-size: 3em;
+  	margin: .2em .5em;
+  	color: rgba(0,0,0, 0.3);
+	}
+	body {
+    	height: 100%;
+	}
+
+	#postHeader {
 	text-align: center;
 	width: 50;
 }
+
 
 
 </style>
