--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,31 @@
 
 <style type="text/css">
+	/*
 	body {
 		background-image: url(https://images.pexels.com/photos/917494/pexels-photo-917494.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
 		background-repeat: no-repeat;
 		background-size: 100%, 100%;
 	}
+	*/
+
+
+	@import url(https://fonts.googleapis.com/css?family=Advent+Pro:100);
+	html { 
+  	background:  url(http://i.imgur.com/5OsqTua.gif) no-repeat center center fixed; 
+  	background-size: cover;
+	}
+	h1{
+  	font-family: 'Advent Pro', sans-serif;
+  	font-size: 3em;
+  	margin: .2em .5em;
+  	color: rgba(0,0,0, 0.3);
+	}
+	body {
+    	height: 100%;
+	}
+
+
+
 
 
 
