--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -25,7 +25,10 @@
 	}
 
 
-
+	img{
+	
+    width: 100px;
+	}
 
 
 
@@ -42,8 +45,12 @@
 
 
 
+
+
+
 <div style="text-align: center;", id = "layout">
-<img src="Logo.png" />
+<%= image_tag  "Logo.png" %>
+
 <h1 id="home_title">Welcome To TalkAboutIt</h1>
 	<%= button_to "Create Account", new_user_path, method: :get %><br>
 	<%= button_to "Login", signin_path, method: :get %>
