--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,7 +8,7 @@
 	}
 	*/
 
-
+/*
 	@import url(https://fonts.googleapis.com/css?family=Advent+Pro:100);
 	html { 
   	background:  url(http://i.imgur.com/5OsqTua.gif) no-repeat center center fixed; 
@@ -24,13 +24,45 @@
     	height: 100%;
 	}
 
+*/
+/*
+	#myVideo {
+  		position: fixed;
+  		right: 0;
+  		bottom: 0;
+  		min-width: 100%;
+  		min-height: 100%;
+	}
 
+*/
 
+	body {
+  		margin: 0;
+  		padding: 0;
+/*  Background fallback in case of IE8 & down, or in case video doens't load, such as with slower connections  */
+  		background: #333;
+  		background-attachment: fixed;
+  		background-size: cover;
+	}
 
+/* The only rule that matters */
+	#video-background {
+/*  making the video fullscreen  */
+  		position: fixed;
+  		right: 0; 
+  		bottom: 0;
+  		min-width: 100%; 
+  		min-height: 100%;
+  		width: auto; 
+  		height: auto;
+  		z-index: -100;
+	}
 
 
 	
     #layout {
+    	font-style: italic;
+    	color: white;
         position: fixed;
         top: 35%;
         left: 50%;
@@ -39,12 +71,24 @@
     }
 
 </style>
+<!---
+<video autoplay muted loop id="myVideo">
+  	<source src="/background.mp4" type="video/mp4">
+</video>
+-->
+
+
+<video autoplay loop id="video-background" muted plays-inline>
+  <source src="https://app.coverr.co/s3/mp4/Follow-the-Tree.mp4" type="video/mp4">
+</video>
 
 
 
 <div style="text-align: center;", id = "layout">
-<img src="Logo.png" />
+<img src="https://files.slack.com/files-pri/T02MD9XTF-FH5PFFRA5/logo.png" />
 <h1 id="home_title">Welcome To TalkAboutIt</h1>
 	<%= button_to "Create Account", new_user_path, method: :get %><br>
 	<%= button_to "Login", signin_path, method: :get %>
 </div>
+
+<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
