--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,3 +1,12 @@
+
+<style>
+	body {
+		background-image: url(https://texturefabrik.files.wordpress.com/2013/05/29-05-13_paper03.jpg);
+	}
+</style>
+
+
+
 <div style="text-align: center;"/>
 <h1><%=@category.name.capitalize %></h1>
 <% @category.posts.each do |post| %>
